<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegistration"
    android:windowSoftInputMode="adjustResize"
    android:background="@color/Background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/register"
            android:textSize="40sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:text="@string/nombres" />
        <EditText
            android:id="@+id/nombre"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/apellidos" />
        <EditText
            android:id="@+id/apellido"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/apellidos"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/fechanac" />
        <EditText
            android:id="@+id/fechaNac"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="DD/MM/AAAA"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/cedula" />
        <EditText
            android:id="@+id/cedula"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/cedula"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/numtelf"
            />

        <EditText
            android:id="@+id/numcel"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/numtelf"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/localidad"/>

        <EditText
            android:id="@+id/localidad"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/localidad"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/hatencion"/>

        <Button
            android:id="@+id/btnHoraApertura"
            style="@style/BtnStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/horaApert"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnHoraCierre"
            style="@style/BtnStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/horaCierre"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/Especialidades"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            style="@style/TextFieldStyle"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        <EditText
            android:id="@+id/email"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/contraseña" />
        <EditText
            android:id="@+id/contraseña"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/confcontraseña" />
        <EditText
            android:id="@+id/confcontraseña"
            style="@style/TextFieldStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:hint="@string/confcontraseña"
            android:inputType="textPassword"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btnsave"
            style="@style/BtnStyle"
            android:layout_marginLeft="40dp"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>